--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ canvas { display:block; }
   margin: 0 auto;
 }
 
+
 #controls ul li{
   float: left;
   width:128px;
@@ -38,6 +39,45 @@ canvas { display:block; }
   transition: all 1s;
 }
 
+#controls .page{
+  width:580px;
+  height:608px;
+  background:url('../img/bg.png');
+  border-radius: 8px;
+  position:absolute;
+  z-index:10;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%,-50%);
+  color: black;
+  font-family: 'Roboto', sans-serif;
+  font-family: 'Noto Serif TC', serif;
+}
+
+#controls .page .tell{
+  font-size: 20px;
+  width: 80%;
+  margin: 15% auto;
+  line-height: 30px;
+}
+
+#controls .page .by{
+  font-size: 20px;
+  width: 80%;
+  position: absolute;
+  bottom: 15px;
+  left: 70%;
+}
+
+#controls .page .close{
+  position: absolute;
+  left: 92%;
+  top:1%;
+  font-size: 28px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
 #controls ul li:hover img{
   transform: rotateY(180deg);
 }
@@ -49,6 +89,7 @@ img.one{
   -moz-backface-visibility:hidden; 	/* Firefox */
   -ms-backface-visibility:hidden; 	/* Internet Explorer */
 }
+
 
 /* li:nth-child(1){
   background: url(../img/01.jpg);
